--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <button>Learn More</button>
         </div>
         <div class="second-div">
-          <img src="1.jpg" alt="img" height="300" width="600">
+          <img src="images/1.jpg" alt="img" height="300" width="600">
         </div>
       </div>
     </section>
@@ -61,7 +61,7 @@
       <h1>This is a Heading</h1>
       <div class="flex">
         <div>
-          <img src="2.jpg" alt="img" height="250" width="350">
+          <img src="images/2.jpg" alt="img" height="250" width="350">
           <h3 class="main-heading">Lorem ipsum dolor sit.</h3>
           <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, magni fugiat
             voluptatibus aliquid,</p>
@@ -69,14 +69,14 @@
 
         </div>
         <div>
-          <img src="3.jpg" alt="img" height="250" width="350">
+          <img src="images/3.jpg" alt="img" height="250" width="350">
           <h3 class="main-heading">Lorem ipsum dolor sit.</h3>
           <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, magni fugiat
             voluptatibus aliquid,.</p>
           <button class="button">Learn More</button>
         </div>
         <div>
-          <img src="4.jpg" alt="img" height="250" width="350">
+          <img src="images/4.jpg" alt="img" height="250" width="350">
           <h3 class="main-heading">Lorem ipsum dolor sit.</h3>
           <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, magni fugiat voluptatibus
             aliquid,.</p>
